tf/lb.tf
resource "aws_lb" "grafana" {
  name            = "grafana"
  internal        = "false"
  security_groups = ["${aws_security_group.grafana_alb.id}"]
  subnets         = ["${aws_default_subnet.default_az1.id}", "${aws_default_subnet.default_az2.id}"]
  idle_timeout    = "3600"

  enable_deletion_protection = false

  tags {
    Name        = "grafana"
    Description = "Application Load Balancer for Grafana"
    ManagedBy   = "Terraform"
  }
}

resource "aws_lb_listener" "front_end_http" {
  load_balancer_arn = "${aws_lb.grafana.arn}"
  port              = "80"
  protocol          = "HTTP"

  default_action {
    target_group_arn = "${aws_lb_target_group.grafana.arn}"
    type             = "forward"
  }
}

resource "aws_lb_listener" "front_end_https" {
  load_balancer_arn = "${aws_lb.grafana.arn}"
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-TLS-1-2-2017-01"
  certificate_arn   = "${var.cert_arn}"

  default_action {
    target_group_arn = "${aws_lb_target_group.grafana.arn}"
    type             = "forward"
  }
}

resource "aws_lb_target_group" "grafana" {
  name                 = "grafana-tg"
  port                 = 80
  protocol             = "HTTP"
  vpc_id               = "${aws_default_vpc.default.id}"
  target_type          = "ip"
  deregistration_delay = 30

  health_check {
    interval            = 10
    path                = "/login"
    port                = "80"
    healthy_threshold   = 2
    unhealthy_threshold = 3
    timeout             = 5
    protocol            = "HTTP"
    matcher             = "200"
  }

  tags {
    Name        = "grafana-tg"
    Description = "Target Group for Grafana"
    ManagedBy   = "Terraform"
  }
}
